creating a docker network

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,41 @@
-version: '3'
+version: '3.9'
 services:
-  app:
-    image: ishwarik7/docker-web-app
-    restart: always
+  app1:
+    build: ./web-app-1/.
+    image: ishwarik7/web-app-1
+    container_name: web_app_1
     ports:
-      - "3001"
+      - "8080:3000"
+    volumes:
+      - ./src:/web-app-1
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:3001/health"]
+      test: curl --fail http://localhost:3000 || exit 1
       interval: 30s
-      timeout: 10s
-      retries: 3
+      timeout: 3s
+      retries: 5
+      start_period: 10s
+    networks:
+      my-network:
+        aliases:
+          - webapp1
+  app2:
+    build: ./web_app_2/.
+    image: ishwarik7/web-app-2
+    container_name: web_app_2
+    expose:
+      - "3001"
+    volumes:
+      - ./src:/web-app-2
+    healthcheck:
+      test: curl --fail http://localhost:3001 || exit 1
+      interval: 30s
+      timeout: 3s
+      retries: 5
+      start_period: 10s
+    networks:
+      my-network:
+        aliases:
+          - webapp2
+networks:
+  my-network:
+    driver: bridge
