--- a/web-app-1/package.json
+++ b/web-app-1/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "docker_web_app",
+    "name": "web_app_1",
     "version": "1.0.0",
     "description": "Node.js on Docker",
     "author": "Ishwari Kamat",
